--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
-RewriteEngine On
-RewriteBase /
-
-# Route all requests to index.php
-RewriteRule ^(.*)$ index.php [QSA,L]
+RewriteEngine on
+## If a directory or a file exists, use it directly
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteCond %{REQUEST_FILENAME} !-d
+# Otherwise forward it to index.php
+RewriteRule . /index.php
